# sqlite-toml-vtab

./: .editorconfig  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml  release.yml
src/: lib.rs  reader.rs  rust_lib.rs  standalone.rs  types.rs
test_data/: item01.toml
tests/: integration.rs
