[package]
name = "sqlite-toml-vtab"
version = "0.1.0"
edition = "2021"

[lib]
name = "toml_vtab"
crate-type=["lib", "cdylib"]

[dependencies]
anyhow = "1"
rusqlite = { version = "0.29.0", optional = true, features = ["vtab"], default-features = false }
serde_json = "1"
sqlite-loadable = { version = "0.0.5", optional = true }
thiserror = "1"
toml = "0.7"
walkdir = "2.3"

[features]
default = ["loadable"]
# Generates a standalone loadable extension
loadable = ["dep:sqlite-loadable"]
# Can be used to load the extension safely using rusqlite.
rlib = ["dep:rusqlite"]


[dev-dependencies]
fallible-iterator = "0.2"
rusqlite = { version = "0.29.0", features = ["bundled", "vtab", "load_extension"], default-features = false }
